add exports to test runner args